--- a/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -56,7 +57,7 @@
                                 <rect key="frame" x="3" y="158" width="194" height="39"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mmN-Ss-WiL">
-                                        <rect key="frame" x="0.0" y="0.0" width="135" height="39"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="131" height="39"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccW-PV-wRg">
                                                 <rect key="frame" x="14" y="7.5" width="20" height="24"/>
@@ -73,16 +74,16 @@
                                                 <rect key="frame" x="14" y="7.5" width="20" height="24"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-34-RcK">
-                                                <rect key="frame" x="39" y="-1" width="80" height="41"/>
+                                                <rect key="frame" x="39" y="-1" width="76" height="41"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvT-sm-YJt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="80" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8q9-nH-HW1">
-                                                        <rect key="frame" x="0.0" y="20.5" width="80" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="20.5" width="76" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -90,7 +91,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJW-XA-t4C">
-                                                <rect key="frame" x="39" y="4" width="80" height="31"/>
+                                                <rect key="frame" x="39" y="4" width="76" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="31" id="xdi-2f-3fy"/>
                                                 </constraints>
@@ -99,7 +100,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="QTj-Mm-Ths">
-                                                <rect key="frame" x="122" y="13.5" width="13" height="12"/>
+                                                <rect key="frame" x="118" y="13.5" width="13" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="12" id="elM-nh-Pl9"/>
                                                     <constraint firstAttribute="width" constant="13" id="ubH-TL-r1X"/>
@@ -129,34 +130,46 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nsI-KK-JUi">
-                                        <rect key="frame" x="135" y="0.0" width="59" height="39"/>
+                                        <rect key="frame" x="131" y="0.0" width="63" height="39"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yow-FS-rI7">
-                                                <rect key="frame" x="0.0" y="7.5" width="54" height="24"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="63" height="39"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="privateSharePeople" translatesAutoresizingMaskIntoConstraints="NO" id="2HG-lz-Pps">
-                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="39"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="24" id="OZD-aO-OW7"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDg-eD-Ha4" customClass="ExtendedTapAreaButton" customModule="Billo" customModuleProvider="target">
-                                                        <rect key="frame" x="24" y="0.0" width="30" height="24"/>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Uf-Ik-Pxb">
+                                                        <rect key="frame" x="24" y="0.0" width="39" height="39"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDg-eD-Ha4" customClass="ExtendedTapAreaButton" customModule="Billo" customModuleProvider="target">
+                                                                <rect key="frame" x="0.0" y="4.5" width="39" height="30"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="30" id="fdw-um-Y7c"/>
+                                                                </constraints>
+                                                                <state key="normal" image="more-1"/>
+                                                            </button>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="30" id="Q46-D5-XhR"/>
+                                                            <constraint firstItem="cDg-eD-Ha4" firstAttribute="centerY" secondItem="2Uf-Ik-Pxb" secondAttribute="centerY" id="6lD-cd-9Cn"/>
+                                                            <constraint firstAttribute="height" constant="39" id="ArZ-y8-YNM"/>
+                                                            <constraint firstAttribute="width" constant="39" id="Aws-fE-zy8"/>
+                                                            <constraint firstItem="cDg-eD-Ha4" firstAttribute="leading" secondItem="2Uf-Ik-Pxb" secondAttribute="leading" id="Mri-y9-Qtg"/>
+                                                            <constraint firstAttribute="trailing" secondItem="cDg-eD-Ha4" secondAttribute="trailing" id="Nla-IW-92o"/>
                                                         </constraints>
-                                                        <state key="normal" image="more-1"/>
-                                                    </button>
+                                                    </view>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Yow-FS-rI7" secondAttribute="bottom" id="AW2-06-i8E"/>
-                                            <constraint firstAttribute="trailing" secondItem="Yow-FS-rI7" secondAttribute="trailing" constant="5" id="JLv-Jo-chi"/>
-                                            <constraint firstItem="Yow-FS-rI7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="nsI-KK-JUi" secondAttribute="top" id="VLN-xC-lRZ"/>
+                                            <constraint firstAttribute="bottom" secondItem="Yow-FS-rI7" secondAttribute="bottom" id="AW2-06-i8E"/>
+                                            <constraint firstAttribute="trailing" secondItem="Yow-FS-rI7" secondAttribute="trailing" id="JLv-Jo-chi"/>
+                                            <constraint firstItem="Yow-FS-rI7" firstAttribute="top" secondItem="nsI-KK-JUi" secondAttribute="top" id="VLN-xC-lRZ"/>
                                             <constraint firstItem="Yow-FS-rI7" firstAttribute="leading" secondItem="nsI-KK-JUi" secondAttribute="leading" id="jD2-pQ-jNz"/>
-                                            <constraint firstItem="Yow-FS-rI7" firstAttribute="centerY" secondItem="nsI-KK-JUi" secondAttribute="centerY" id="riM-RW-mpT"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ih3-tg-57V">
@@ -230,6 +243,7 @@
                 <outlet property="fileNameLabel" destination="nvT-sm-YJt" id="dcN-5l-OeU"/>
                 <outlet property="leftSpaceForSmallmage" destination="a2J-mD-6o2" id="G9x-Lo-vbY"/>
                 <outlet property="moreButton" destination="cDg-eD-Ha4" id="aRR-oO-iGZ"/>
+                <outlet property="moreView" destination="2Uf-Ik-Pxb" id="xQ7-1s-fDt"/>
                 <outlet property="selectionImageView" destination="U7U-HC-bQs" id="z76-49-VVy"/>
                 <outlet property="separatorView" destination="Ih3-tg-57V" id="82s-th-WEJ"/>
                 <outlet property="sharedIcon" destination="2HG-lz-Pps" id="NxQ-JT-Ipr"/>
@@ -248,5 +262,8 @@
         <image name="more-1" width="6" height="24"/>
         <image name="privateSharePeople" width="16" height="13"/>
         <image name="selectedList" width="36" height="36"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
